src/test/deca/context/valid/SO/ConvFloatAddFloatInt.deca
// Description:
//    Addition d'un flottant et d'un entier (ConvFloat)
//
// Resultats:
//    
//
// Historique:
//    cree le 12/01/2022

{
        int i = 12;
        float f = 4.3;
        f = f + i;
        print("16.3=");
        println(f);
}