src/test/deca/context/invalid/SO/printBool.deca
// Description:
//    Programme utilisant un print d'un bool
//
// Resultats:
//    
//
// Historique:
//    cree le 14/01/2022

{
    boolean p;
    println(p);
}